--- a/src/style.css
+++ b/src/style.css
@@ -1,52 +1,68 @@
 body {
-    font-family: Arial, sans-serif;
-    margin-left: 5rem;
-    margin-right: 5rem;
-    padding: 0;
-  }
-  
-  .container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  h1 {
-    text-align: center;
-  }
-  
-  label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  input[type="range"]{
-    width: 50%;
-  }
-  input[type="text"] {
-    width: 100%;
-    height: 5rem;
-    margin-bottom: 1.5rem;
-  }
-  
-  button {
-    padding: 10px 20px;
-    margin-top: 2rem;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
-  ul {
-    list-style-type: lower-roman;
-    margin-left: 9rem;
-    padding: 0;
-  }
-  
-  li {
-    margin-bottom: 5px;
-  }
+  font-family: Arial, sans-serif;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  padding: 0;
+}
+
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+h1 {
+  text-align: center;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+input[type="range"] {
+  width: 50%;
+}
+input[type="text"] {
+  width: 100%;
+  height: 5rem;
+  margin-bottom: 1.5rem;
+}
+
+button {
+  padding: 10px 20px;
+  margin-top: 2rem;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+ul {
+  list-style-type: lower-roman;
+  margin-left: 9rem;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 5px;
+}
+
+.myVideo {
+  position: fixed;
+  z-index: -1;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.content {
+  bottom: 0;
+  color: #faf7f7;
+  width: 100%;
+  padding: 20px;
+}
